@@ -22,6 +22,17 @@
     //MySQL4DebugEnabled = YES;
     //PGDebugEnabled = YES;
 
+    // set the maximum allowed size for content being sent to SOGo, this can
+    // also limit the file attachment size being uploaded to SOGo when
+    // composing a mail. Default is 0 or disabled (unlimit).
+    // The value is in kilobyte.
+    //WOMaxUploadSize = 0;
+
+    // Define the URL to online help for SOGo. When set, an additional icon
+    // will appear near the logout button in SOGo's web interface. The URL
+    // will always be open in a blank target.
+    //SOGoHelpURL = '';
+
     // Performance Tuning
     //
     // The amount of instances of SOGo that will be spawned to handle multiple
@@ -82,12 +93,6 @@
     //      ProxyPass /Microsoft-Server-ActiveSync ... timeout=600
     //
     //WOWatchDogRequestTimeout = 10;
-
-    // set the maximum allowed size for content being sent to SOGo, this can
-    // also limit the file attachment size being uploaded to SOGo when
-    // composing a mail. Default is 0 or disabled (unlimit).
-    // The value is in kilobyte.
-    //WOMaxUploadSize = 0;
 
     // The maximum amount of memory (in megabytes) that a child can use.
     // Reaching that value will force children processes to restart, in order
