@@ -1,6 +1,9 @@
 iRedMail-0.9.5:
     * Improvements:
-        + Switch to SOGo v3 (instead of v2).
+        + Switch OpenLDAP backend to mdb (Memory-Mapped DB backend to slapd)
+          on Linux and FreeBSD (not available on OpenBSD yet).
+        + Switch SOGo to 3.x from 2.x on Linux distributions. It relies on
+          ports tree on BSD distributions.
         + Able to enable/disable sogo service for a single user with new SQL
           column `mailbox.enablesogo` and LDAP attribute/value
           `enabledService=sogo`.
